<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="match_parent"
        android:layout_height="306dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/bike"
        android:contentDescription="@string/todo2" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="218dp"
        android:text="@string/bambike_ecotours_intramuros1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentStart="false" />

    <TextView
        android:id="@+id/Location1"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="111dp"
        android:text="@string/location_real_street_corner_general_luna_street_plaza_san_luis_complex_intramuros_manila_luzon_1002_philippines1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/distance1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/Location1"
        android:layout_marginBottom="78dp"
        android:text="@string/distance_from_ust_3_7km1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/back1"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/distance1"
        android:layout_marginBottom="19dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/next1"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/back1"
        android:layout_marginEnd="19dp"
        android:text="@string/next" />

</RelativeLayout>