<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="403dp"
        android:layout_height="293dp"
        android:layout_marginRight="100dp"
        app:srcCompat="@drawable/bike"
        android:contentDescription="@string/todo1"
        android:layout_marginEnd="100dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bambike_ecotours_intramuros1"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_marginLeft="25dp" />

    <TextView
        android:id="@+id/Location"
        android:layout_width="316dp"
        android:layout_height="75dp"
        android:text="@string/location_real_street_corner_general_luna_street_plaza_san_luis_complex_intramuros_manila_luzon_1002_philippines2"
        android:textSize="20sp"
        tools:layout_marginLeft="50dp"
        tools:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="22dp"
        android:text="@string/distance_from_ust_3_7km1"
        android:textSize="20sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="22dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        tools:layout_marginTop="30dp">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            tools:layout_marginLeft="50dp"
            tools:layout_marginRight="150dp" />

        <Button
            android:id="@+id/Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:text="@string/next"
            tools:layout_marginRight="50dp"
            android:layout_marginStart="6dp" />
    </LinearLayout>

</LinearLayout>